<resources>
    <string name="app_name">VibeKeyOpenAndroid</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="stationTitleDefault">Station Name Goes Here...</string>
    <string name="songInfoText">Song Info Goes Here...</string>
    <string name="imageDescription">Album Cover</string>
    <string name="loginWelcomeText">Welcome to VibeKey</string>
    <string name="LoginButtonText">Login</string>
    <string name="serverNameText">Server Name</string>
    <string name="usernameText">Username</string>
    <string name="passwordText">Password</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_channel_selection">ChannelSelectionActivity</string>
</resources>
