<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/loginWelcomeText"
        android:id="@+id/loginTitleView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/serverInput"
        android:layout_below="@+id/loginTitleView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/serverNameText"
        android:layout_marginBottom="20dp"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/usernameInput"
        android:layout_below="@+id/serverInput"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/usernameText"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordInput"
        android:layout_below="@+id/usernameInput"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/passwordText"
        android:layout_marginBottom="20dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LoginButtonText"
        android:id="@+id/LoginButton"
        android:layout_below="@+id/passwordInput"
        android:layout_centerHorizontal="true" />
</RelativeLayout>